añado clasificacion, partidos, middleware

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ MONGO_URI=mongodb+srv://udvillalba:123@cluster0.qqza6wb.mongodb.net/
 
 # Una clave secreta larga y aleatoria para firmar los JSON Web Tokens (JWT)
 JWT_SECRET=udevillalba-juanma-halet-elena
+
+NUESTRO_EQUIPO=UD Villalba
