--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Conexión a MongoDB (reemplaza <user>, <password> y <dbname>)
-MONGO_URI=mongodb+srv://udvillalba:123@cluster0.qqza6wb.mongodb.net/
+MONGO_URI=mongodb+srv://udvillalba:123@cluster0.qqza6wb.mongodb.net/UDVILLALBA
 
 # Una clave secreta larga y aleatoria para firmar los JSON Web Tokens (JWT)
 JWT_SECRET=udevillalba-juanma-halet-elena
