--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 MONGO_URI=mongodb+srv://udvillalba:123@cluster0.qqza6wb.mongodb.net/UDVILLALBA
 
 # Una clave secreta larga y aleatoria para firmar los JSON Web Tokens (JWT)
-JWT_SECRET=udevillalba-juanma-halet-elena
+JWT_SECRET=udvillalba-juanma-halet-elena
 
 NUESTRO_EQUIPO=UD Villalba
+PORT=5000
