--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-node_modules
+# Dependencias
+node_modules/
+
+# Variables de entorno y secretos
+.env
+
+# Archivos subidos por los usuarios (imágenes, etc.)
+uploads/
+.uploads
+
+# Logs de errores (opcional pero recomendado)
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Archivos de sistema operativo (basura)
+.DS_Store
+Thumbs.db
